Máquina que genera conservas

--- a/LAB01/styles.css
+++ b/LAB01/styles.css
@@ -152,3 +152,9 @@ footer p{
 .token-off {
     display: none;
 }
+
+/* Message para máquina de conservas */
+
+.hiddenMessage { 
+    display: none;
+}
